reports/dist/run-full-bench-20260609-085346/gateway-api-istio-egress/artifacts/manifests/istio-serviceentries.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: ServiceEntry
  metadata:
    creationTimestamp: "2026-06-09T13:37:05Z"
    generation: 1
    name: httpbin-external
    namespace: sample
    resourceVersion: "654"
    uid: 7405f6f8-c127-42d8-ab6d-072c1d50979a
  spec:
    hosts:
    - httpbin.org
    location: MESH_EXTERNAL
    ports:
    - name: http
      number: 80
      protocol: HTTP
    resolution: DNS
  status:
    addresses:
    - host: httpbin.org
      value: 240.240.0.1
    - host: httpbin.org
      value: 2001:2::1
kind: List
metadata:
  resourceVersion: ""
